alterações para colocar a parte de pacotes no nos resultados

--- a/inst/book/conclusoes.qmd
+++ b/inst/book/conclusoes.qmd
@@ -10,7 +10,7 @@
 
 Este trabalho de doutorado teve como objeto de estudo os Captchas, que são desafios utilizados para identificar se o acesso à uma página na internet é realizada por uma pessoa ou uma máquina. A pesquisa apresentou um breve histórico dos Captchas, os problemas de sua utilização em serviços públicos e as abordagens existentes para resolução automática de Captchas. Em seguida, apresentou-se como uma nova abordagem, o WAWL, poderia aliar técnicas de raspagem de dados e aprendizado estatístico com rótulos parciais para obter modelos poderosos de resolução de Captchas sem a necessidade de anotar vários casos manualmente. Por fim, foram apresentadas as propriedades do modelo proposto e os resultados empíricos através de uma série de simulações.
 
-Os resultados da pesquisa foram positivos. Na parte teórica, várias pesquisas já apontavam que o aprendizado com rótulos parciais ou rótulos complementares possuiam boas propriedades. O resultado foi verificado a estudando-se as propriedades da função de perda proposta. Na parte prática, o trabalho mostrou que a técnica apresenta bons resultados, aumentando a acurácia dos modelos iniciais em mais de 3 vezes, sem a necessidade de anotar novos dados. Além disso, foram encontradas evidências de que o método pode ser aplicado iterativamente, resultado em modelos com poder preditivo ainda maior.
+Os resultados da pesquisa foram positivos. Na parte teórica, pesquisas já apontavam que o aprendizado com rótulos parciais ou rótulos complementares possuiam boas propriedades. O trabalho mostrou empiricamente que a técnica apresenta bons resultados, aumentando a acurácia dos modelos iniciais em mais de 3 vezes, sem a necessidade de anotar novos dados. Além disso, foram encontradas evidências de que o método pode ser aplicado iterativamente, resultado em modelos com poder preditivo ainda maior.
 
 As contribuições do estudo podem ser organizadas em três tipos: contribuições para a sociedade em geral, contribuições para a pesquisa acadêmica e contribuições para a comunidade de programação. Os próximos parágrafos descrevem esses avanços.
 
@@ -24,7 +24,7 @@ Com isso, pode-se concluir que os quatro objetivos descritos na @sec-objetivos f
 
 É evidente, no entanto, que o trabalho apresenta algumas limitações. Na parte teórica, os resultados matemáticos podem ser desenvolvidos com maior detalhamento. Especificamente, outras propostas de função de perda podem ser apresentadas, bem como os testes empíricos com essas funções de perda. A escolha de apenas uma alternativa foi feita por conta do foco em resolver o problema de pesquisa (os Captchas) em detrimento da discussão detalhada do aprendizado com rótulos parciais, bem como da necessidade de fazer muito mais simulações se outras funções de perda fossem propostas.
 
-Outra limitação importante do estudo está na aplicação iterada. A pesquisa apresentou essa parte como um resultado adicional, mas os limites da aplicação iterada ainda não foram estudados de forma completa. Essa limitação pode ser entendida também como um próximo passo, que seria uma solução de *online learning*
+Outra limitação importante do estudo está na aplicação iterada. A pesquisa apresentou essa parte como um resultado adicional, mas os limites da aplicação iterada ainda não foram estudados de forma completa. Essa limitação pode ser entendida também como um próximo passo, que seria uma solução de *online learning*.
 
 Uma extensão possível desta pesquisa é a criação de um modelo que aprende diretamente da *web*, sem a separação de passos descrita pelo WAWL. A técnica consiste em inserir as funções de acesso e teste do Captcha como método de obtenção de amostras do *dataset* do Captcha (mais detalhes na @sec-captcha-do-zero). Dessa forma, o modelo poderia obter novos dados em cada *minibatch*, indefinidamente. A vanagem dessa abordagem é que ela seria menos burocrática que o WAWL, que precisa de uma pessoa para escrever as aplicações iteradas. A desvantagem é que o ajuste do modelo dependeria de uma conexão com a internet e seria mais suscetível a problemas de conexão, que precisariam ser tratados com cuidado.
 
