--- a/inst/book/introducao.qmd
+++ b/inst/book/introducao.qmd
@@ -50,7 +50,7 @@ Dos 16 projetos disponibilizados na [página de pesquisas no site da ABJ](https:
 
 Em muitas situações, portanto, a única alternativa para realizar as pesquisas é acessando os dados via coleta automatizada nos sites. Todos os tribunais possuem ferramentas de consulta individualizadas de processos, por conta do que está previsto na CF. A solução, portanto, passa a ser construir uma ferramenta que obtém todos os dados automaticamente. Tal conceito é conhecido como *raspagem de dados* [@zhao2017] e será desenvolvido com maiores detalhes no Capítulo @sec-metodologia.
 
-Os Captchas se tornam prejudiciais à sociedade quando o acesso automatizado é necessário para realizar pesquisas científicas. Infelizmente, vários tribunais utilizam a barreira do Captcha. Alguns tribunais, inclusive, têm o entendimento de que o acesso automatizado é prejudicial, como o TJRS, que emitiu um [comunicado](https://www.tjrs.jus.br/novo/processos-e-servicos/processo-eletronico/acesso-robotizado-a-dados-publicos-e-duplamente-arriscado/) sobre o tema.
+Os Captchas se tornam prejudiciais à sociedade quando o acesso automatizado é necessário para realizar pesquisas científicas. Infelizmente, vários tribunais utilizam a barreira do Captcha. Alguns tribunais, inclusive, têm o entendimento de que o acesso automatizado é prejudicial, como o Tribunal de Justiça do Rio Grande do Sul (TJRS), que emitiu um [comunicado](https://www.tjrs.jus.br/novo/processos-e-servicos/processo-eletronico/acesso-robotizado-a-dados-publicos-e-duplamente-arriscado/) sobre o tema.
 
 Uma justificativa comum para implementar Captchas em consultas públicas é a estabilidade dos sistemas. Ao realizar muitas consultas de forma automática, um robô pode tornar o sistema instável e, em algumas situações, até mesmo derrubar o servidor que disponibiliza as consultas.
 
@@ -86,7 +86,7 @@ Os autores também defendem que o Captcha é uma forma de fazer com que pessoas 
 
 Não demorou para surgirem os primeiros resolvedores de Captchas[^introducao-4]. @mori2003a foi um dos primeiros trabalhos publicados sobre o tema e utiliza diversas técnicas de processamento de imagens para obter os rótulos corretos. Também não demorou para a comunidade científica perceber que redes neurais eram úteis nesse contexto [@chellapilla2004]. No artigo de 2004, Chellapilla e Simard desenvolvem um algoritmo baseado em heurísticas para segmentar a imagem e redes neurais para identificar as imagens individuais.
 
-[^introducao-4]: Outro termo para *resolver* Captchas é *quebrar* Captchas. Nesta tese, optou-se por utilizar o termo *resolver,* para enfatizar a interpretação do Captcha como um desafio, não como um problema de criptografia.
+[^introducao-4]: Outro termo para *resolver* Captchas é *quebrar* Captchas. Nesta tese, optou-se por utilizar o termo *resolver*, para enfatizar a interpretação do Captcha como um desafio, não como um problema de criptografia.
 
 A partir desse ponto, foi iniciada uma luta entre geradores e resolvedores de Captchas. Do lado dos geradores, as pessoas envolvidas foram tanto acadêmicos tentando desenvolver desafios cada vez mais difíceis para avançar na pesquisa em inteligência artificial, quanto empresas de tecnologia tentando se proteger contra programas avançados. Do lado dos resolvedores, as pessoas envolvidas foram tanto acadêmicos tentando desenvolver novas técnicas para avançar nos modelos de reconhecimento de imagens, quanto *spammers* buscando novas formas de realizar ataques cibernéticos.
 
@@ -107,7 +107,7 @@ O reCaptcha v1 foi uma solução de aproveitar o tempo das pessoas que resolvem 
 knitr::include_graphics("assets/img/recaptcha-v1.png")
 ```
 
-Curiosamente, foi com a própria Google que os resolvedores ficaram em vantagem na luta. Os modelos de inteligência artificial continuaram avançando, notadamente com o avanço dos modelos de redes neurais profundas [@lecun2015a]. No trabalho de @goodfellow2013, todos funcionários da Google na época, foi apresentado um modelo de redes neurais convolucionais que resolvia o reCaptcha v1 com 99.8% de acurácia. No ano seguinte, em 2014, a Google descontinuou o reCaptcha v1, lançando o reCaptcha v2.[^introducao-8]
+Curiosamente, foi com a própria Google que os resolvedores ficaram em vantagem na luta. Os modelos de inteligência artificial continuaram avançando, notadamente com o avanço dos modelos de redes neurais profundas [@lecun2015]. No trabalho de @goodfellow2013, todos funcionários da Google na época, foi apresentado um modelo de redes neurais convolucionais que resolvia o reCaptcha v1 com 99.8% de acurácia. No ano seguinte, em 2014, a Google descontinuou o reCaptcha v1, lançando o reCaptcha v2.[^introducao-8]
 
 [^introducao-8]: *Are you a robot? Introducing No Captcha reCaptcha.* Acessível no [blog da Google](https://security.googleblog.com/2014/12/are-you-robot-introducing-no-captcha.html). Último acesso em 01/11/2022.
 
@@ -125,7 +125,7 @@ knitr::include_graphics("assets/img/turkey.png")
 
 Com o advento do reCaptcha v2, a pergunta dos resolvedores de Captcha passou a ser: como criar modelos que funcionam razoavelmente bem nos Captchas sem a necessidade de rotular vários casos? Se esse desafio fosse resolvido, dois avanços aconteceriam: i) um grande avanço na inteligência artificial, especificamente na área de visão computacional, e ii) uma nova forma de vencer a luta.
 
-Até o momento de escrita da tese, não existia um modelo geral que resolvesse com alta acurácia todos os desafios colocados pelo reCaptcha v2 e seus concorrentes. No entanto, vários avanços apareceram no sentido de reduzir a quantidade de imagens rotuladas para criar candidatos a resolvedores. Dentre eles, o mais significativos são os baseados nas redes generativas adversariais (*Generative Adversarial Networks,* ou GANs), propostas no famoso trabalho de @goodfellow. O primeiro trabalho que utiliza modelos generativos no contexto de Captchas mostrou uma redução de 300x na quantidade de dados classificados necessária para resolver um Captcha (@george2017; nesse caso, os autores propõem uma rede diferente do GAN, chamada *Recursive Cortical Network*, ou RCN). Outros trabalhos mais recentes [@ye2018a; @wang2021] avançam ainda mais na pesquisa, reduzindo o trabalho de classificação para um novo Captcha de texto para aproximadamente 2 horas.
+Até o momento de escrita da tese, não existia um modelo geral que resolvesse com alta acurácia todos os desafios colocados pelo reCaptcha v2 e seus concorrentes. No entanto, vários avanços apareceram no sentido de reduzir a quantidade de imagens rotuladas para criar candidatos a resolvedores. Dentre eles, o mais significativos são os baseados nas redes generativas adversariais (*Generative Adversarial Networks,* ou GANs), propostas no famoso trabalho de @goodfellowGenerativeAdversarialNetworks2014. O primeiro trabalho que utiliza modelos generativos no contexto de Captchas mostrou uma redução de 300x na quantidade de dados classificados necessária para resolver um Captcha (@george2017; nesse caso, os autores propõem uma rede diferente do GAN, chamada *Recursive Cortical Network*, ou RCN). Outros trabalhos mais recentes [@ye2018; @wang2021] avançam ainda mais na pesquisa, reduzindo o trabalho de classificação para um novo Captcha de texto para aproximadamente 2 horas.
 
 Mas foi em 2018, com o reCaptcha v3, que a Google deu a palavra final. Com a nova versão, as verificações de navegador passaram a ser muito mais poderosas, sendo raros os casos em que o site fica em dúvidas se a pessoa é ou não um robô. Versões mais recentes, como o reCaptcha *Enterprise,* de 2020, ainda permitem que as pessoas que mantêm os sites façam o ajuste de modelos de detecção de robôs. Os desafios de reconhecimento de texto, objetos ou imagens perderam a importância.
 
@@ -200,6 +200,6 @@ O projeto foi desenvolvido em torno de duas hipóteses principais. As hipóteses
 
 O segundo capítulo, "metodologia", contém todos os passos dados para construção da tese, tanto do ponto de vista teórico como prático. Parte-se da definição técnica dos Captchas, chegando até as redes neurais e a classe problema trabalhada de forma ampla. Em seguida, apresenta-se o método WAWL e suas características. Depois, a base de dados é descrita, mostrando as fontes de dados consideradas e as técnicas de raspagem de dados utilizadas. Por último, descreve-se, com detalhes, as simulações realizadas para obtenção dos resultados empíricos.
 
-O terceiro capítulo, "resultados", apresenta os resultados da pesquisa. Do ponto de vista teórico, são apresentadas as propriedades do modelo proposto. Do ponto de vista empírico, são apresentados os resultados das simulações e outros experimentos realizados com a técnica WAWL. O capítulo também apresenta uma breve discussão dos resultados obtidos.
+O terceiro capítulo, "resultados", apresenta os resultados da pesquisa. Primeiro são apresentados os resultados das simulações e outros experimentos realizados com a técnica WAWL. Em seguida, descreve o pacote `{captcha}`, criado para atingir o objetivo 4 da pesquisa. O capítulo também apresenta uma breve discussão dos resultados obtidos.
 
-No quarto e último capítulo, "conclusão", a pesquisa é concluída, com apresentação das considerações finais e próximos passos. Também foi incluído um apêndice descrevendo e documentando o pacote `{captcha}`, criado atingir o objetivo 4 da pesquisa.
+No quarto e último capítulo, "conclusão", a pesquisa é concluída, com apresentação das considerações finais e próximos passos. Também foi incluído um apêndice descrevendo e documentando os pacotes `{captchaDownload}` e `{captchaOracle}`, criados para atuar em conjunto com o pacote `{captcha}` para implementar o método WAWL.
