ajustes na conclusão, agradecimentos à @beatrizmilz. Fix #4

--- a/inst/book/Resolvendo-Captchas.tex
+++ b/inst/book/Resolvendo-Captchas.tex
@@ -4411,7 +4411,7 @@ podendo servir como base para pesquisas futuras.
 
 Este trabalho de doutorado teve como objeto de estudo os Captchas, que
 são desafios utilizados para identificar se o acesso à uma página na
-internet é realizada por uma pessoa ou uma máquina. A pesquisa
+internet é realizado por uma pessoa ou uma máquina. A pesquisa
 apresentou um breve histórico dos Captchas, os problemas de sua
 utilização em serviços públicos e as abordagens existentes para
 resolução automática de Captchas. Em seguida, apresentou-se como uma
@@ -4500,7 +4500,7 @@ pelo WAWL. A técnica consiste em inserir as funções de acesso e teste do
 Captcha como método de obtenção de amostras do \emph{dataset} do Captcha
 (mais detalhes na Seção~\ref{sec-captcha-do-zero}). Dessa forma, o
 modelo poderia obter novos dados em cada \emph{minibatch},
-indefinidamente. A vanagem dessa abordagem é que ela seria menos
+indefinidamente. A vantagem dessa abordagem é que ela seria menos
 burocrática que o WAWL, que precisa de uma pessoa para escrever as
 aplicações iteradas. A desvantagem é que o ajuste do modelo dependeria
 de uma conexão com a internet e seria mais suscetível a problemas de
@@ -4511,12 +4511,12 @@ de Captchas, desenvolvido a partir das bases que foram construídas
 durante a pesquisa. Esse modelo poderia ser utilizado como modelo
 inicial para a resolução de novos Captchas e aprimorado com o oráculo,
 podendo até afastar completamente a necessidade de anotação manual. No
-momento, não é possível saber que esse modelo realmente funcionaria na
-prática, já que i) nada garante que ele tenha uma acurácia maior que
-10\% para um novo Captcha, mesmo se construído com base em Captchas de
-várias origens e ii) foram encontradas evidências de que os modelos com
-acurácia menor de 10\% têm mais dificuldades em melhorar com o método
-WAWL.
+momento, não é possível saber se esse modelo funcionaria na prática de
+forma consistente, já que i) nada garante que ele tenha uma acurácia
+maior que 10\% para um novo Captcha, mesmo se construído com base em
+Captchas de várias origens e ii) foram encontradas evidências de que os
+modelos com acurácia menor de 10\% têm mais dificuldades em melhorar com
+o método WAWL.
 
 A presente tese foi fruto de um longo processo de investigação e
 desenvolvimento, investigando os aspectos relevantes dos Captchas de
